# yew-test-app

./: Cargo.toml  README.md  index.html
src/: lib.rs  main.rs
src/pages/: counter.rs  landing.rs  loading.rs  mod.rs  not_found.rs
src/pages/nested/: index.rs  layout.rs  mod.rs  page_1.rs  page_2.rs
src/utils/: hooks.rs  mod.rs
