[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

[dependencies]
# this is the development version of Yew
yew = { git = "https://github.com/yewstack/yew/", features = ["hydration", "ssr"] }
rand = "0.8.5"
getrandom = { version = "0.2.6", features = ["js"] }
yew-router = { git = "https://github.com/yewstack/yew" }
gloo-console = "0.2.1"
gloo-utils = "0.1.2"
gloo-timers = "0.2.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
actix-web = "4"
actix-files = "0.6.0"